[package]
name = "UntitledOpenBindings"
version = "1.0.0"
authors = ["MadLadSquad <contact@madladsquad.com>", "Stanislav Vasilev <contact@i-use-gentoo-btw.com>"]
description = "Bindings for https://github.com/Seeker14491/opener library"
repository = "https://github.com/MadLadSquad/UntitledOpen"
readme = "../README.md"
keywords = [ "open", "default", "launcher", "browser", "bindings", "C" ]
categories = [ "os"  ]
license = "MIT"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
opener = { version = "0.6.1", features = [ "reveal" ] }
libc = "0.2"
rfd = { version = "0.11.4" }
